ADD: pluginIcon.svg pluginIcon_dark.svg palm-up-hand-noto.svg, DEL: Screenshot mkdox-button.png, MOD: .gitignore claude.md codex.md gemini.md about.txt android-chrome-192x192.png android-chrome-512x512.png apple-touch-icon.png favicon-16x16.png favicon-32x32.png favicon.ico index.md mkdocs.yml plugin.xml llmbrains.svg

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -68,7 +68,4 @@ plugins:
         as_creation: date
         as_update: date
 
-copyright: "&copy; 2025 JetBrains mkdox button &bull; pforret"
-
-extra:
-  generator: false
+copyright: "&copy; 2025 LLM Brains &bull; pforret"
