MOD: LlmBrainsAgentsActionGroup.kt plugin.xml

--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -18,6 +18,9 @@
         <group
             id="com.llmbrains.actions.LlmBrainsAgentsGroup"
             class="com.llmbrains.actions.LlmBrainsAgentsActionGroup"
+            text="LLM Brains"
+            description="Open any CLI coding agent in a new terminal window."
+            icon="icons/llmbrains.svg"
             popup="true">
             <add-to-group group-id="MainToolbarRight" anchor="last"/>
             <add-to-group group-id="ToolsMenu" anchor="last"/>
