--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -1,8 +1,9 @@
 <idea-plugin>
+    <version>0.0.11</version>
+    <idea-version since-build="233" />
     <id>com.llmbrains.plugin</id>
     <name>LLM Brains</name>
-    <vendor email="hi@llmbrains.dev" url="https://github.com/toolstud-io/LlmBrains">LLM Brains</vendor>
-
+    <vendor email="peter@forret.com" url="https://github.com/toolstud-io/LlmBrains">LLM Brains</vendor>
     <description><![CDATA[
         <p>Launch popular CLI coding agents directly from JetBrains IDEs.</p>
         <ul>
@@ -10,18 +11,19 @@
             <li>Run a diagnostic helper to confirm which CLIs are available and learn how to install them.</li>
         </ul>
     ]]></description>
-
     <depends>com.intellij.modules.platform</depends>
     <depends>org.jetbrains.plugins.terminal</depends>
-
+    <extensions defaultExtensionNs="com.intellij">
+        <notificationGroup id="LlmBrains" displayType="BALLOON" isLogBased="false"/>
+    </extensions>
     <actions>
         <group
-            id="com.llmbrains.actions.LlmBrainsAgentsGroup"
-            class="com.llmbrains.actions.LlmBrainsAgentsActionGroup"
-            text="LLM Brains"
-            description="Open any CLI coding agent in a new terminal window."
-            icon="icons/llmbrains.svg"
-            popup="true">
+                id="com.llmbrains.actions.LlmBrainsAgentsActionGroup"
+                class="com.llmbrains.actions.LlmBrainsAgentsActionGroup"
+                text="LLM Brains"
+                description="Open any CLI coding agent in a new terminal window."
+                icon="icons/llmbrains.svg"
+                popup="true">
             <add-to-group group-id="MainToolbarRight" anchor="last"/>
         </group>
     </actions>
