--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -4,6 +4,8 @@
     <vendor email="you@example.com">Your Name</vendor>
     <version>0.1.0</version>
 
+    <icon>palm-up-hand-noto.svg</icon>
+
     <description>
         Open popular CLI coding agents (Claude, Codex, Gemini) in an IDE terminal.
     </description>
@@ -14,7 +16,8 @@
     <actions>
         <!-- Dropdown action group with 🫴 text in the right side of the main toolbar -->
         <group id="com.example.llmbrains.Dropdown" class="com.example.llmbrains.LlmBrainsActionGroup"
-               text="🫴" description="Open any CLI coding agent in a new terminal window." popup="true">
+               text="🫴" description="Open any CLI coding agent in a new terminal window." popup="true"
+               icon="palm-up-hand-noto.svg">
             <add-to-group group-id="MainToolbarRight" anchor="last"/>
             <keyboard-shortcut keymap="Default" first-keystroke="ctrl alt L"/>
         </group>
