--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -3,17 +3,14 @@
     <name>LLM Brains</name>
     <vendor email="peter@forret.com">Peter Forret</vendor>
     <version>0.1.0</version>
-
     <description>
         Open popular CLI coding agents (Claude, Codex, Gemini) in an IDE terminal.
     </description>
-
     <depends>com.intellij.modules.platform</depends>
     <depends>org.jetbrains.plugins.terminal</depends>
-
     <actions>
         <group id="com.forret.llmbrains.Dropdown" class="com.forret.llmbrains.LlmBrainsActionGroup"
-               text="🫴" description="Open any CLI coding agent in a new terminal window." popup="true"
+               text="🫴" description="Open popular CLI coding agents (Claude, Codex, Gemini) in an IDE terminal." popup="true"
                icon="/icons/palm-up-hand-noto.svg">
             <add-to-group group-id="MainToolbarRight" anchor="last"/>
         </group>
