CHANGES: blog/posts/2025-10-01-v0-3-7.md(A) -  mkdocs.yml(M) -

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -20,7 +20,7 @@ theme:
     - navigation.tracking
     - search.highlight
     - search.suggest
-#    - toc.integrate
+    - toc.integrate
   icon:
     repo: fontawesome/brands/bitbucket
 
