ADD: 2025-12-15.auto-detect-agents.md AgentDetector.kt, MOD: CHANGES.md build.gradle.kts AgentSettingsState.kt CodingAgents.kt LlmBrainsActionGroup.kt plugin.xml

--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -15,6 +15,7 @@
     <depends>com.intellij.modules.platform</depends>
     <depends>org.jetbrains.plugins.terminal</depends>
     <extensions defaultExtensionNs="com.intellij">
+        <notificationGroup id="LLM Brains" displayType="BALLOON"/>
         <applicationConfigurable instance="com.forret.llmbrains.AgentSettingsConfigurable" displayName="LLM Brains"/>
     </extensions>
     <actions>
